avoid scrollbar if not needed

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html{
 }
 
 .layout{
-  overflow-y: scroll;
+  overflow-y: auto;
 
 }
 
